Se subo todo el Workspace member, funcionalidad correjida y conectada con los espacios de trabajo